--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,10 +7,10 @@
     android:background="@color/white"
     tools:context="com.github.example.MainActivity">
 
-    <TextView
-        android:gravity="center"
+    <Button
+        android:id="@+id/btn_test"
+        android:text="test"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:layout_height="wrap_content"/>
 
 </FrameLayout>
